# apex

./: Cargo.toml  README.md  release.sh
assets/: icon.icns
src/: files.rs  main.rs
