[package]
name = "apex"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
eframe = "0.34.1"
egui = "0.34.1"
egui_commonmark = { version = "0.23.0", features = ["macros"]}
egui_extras = "0.34.1"
serde_json = "1.0.149"

[package.metadata.bundle]
name = "Apex"
identifier = "com.Apex.Apex"
icon = ["assets/icon.icns"]
